# Scripts-Studio-Code

./: .depend  .editorconfig  .eslint-ignore  .gitattributes  .gitconfig  .gitignore  .gitmodules  .mailmap  AGENTS.md  All.gitignore  App.xaml  App.xaml.cs  CHANGES.md  CONTRIBUTING.md  Cargo.toml  Changes  DataAnalysis.fs  DataProcessor.c  Go.gitignore  Haskell.cabal  INSTALL.adoc.md  LICENSE  LICENSE.txt  MainWindow.xaml  MainWindow.xaml.cs  Makefile  MyCLibrary.c  MyFSharpModule.fs  README.adoc.md  README.md  Scripts-Studio-Code.csproj  THANKS.md  ThirdPartyNotices.txt  VERSION  _tag  best_binaries.Mak  build.zig  build.zig.zon  build_config.Mak  cglicenses.json  (+17 more)
.github/: copilot-instructions.md
.src/: Cargo.toml  main.rs
.src/.cargo/: config.toml
.src/cli/: CONTRIBUTING.md  Cargo.toml
.src/src/: lib.rs
cli/: Cargo.toml  ThirdPartyNotices.txt  build.rs  rustfmt.toml
cli/src/: async_pipe.rs  commands.rs  desktop.rs  json_rpc.rs  msgpack_rpc.rs  state.rs
extensions/: cgmanifest.json  esbuild-extension-common.mts  esbuild-webview-common.mts  mangle-loader.js  package-lock.json  package.json  postinstall.mjs  shared.webpack.config.mjs  tsconfig.base.json
extensions/bat/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/clojure/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/coffeescript/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/configuration-editing/: .vscodeignore  esbuild.browser.mts  esbuild.mts  package-lock.json  package.json  package.nls.json  tsconfig.browser.json  tsconfig.json
extensions/cpp/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/csharp/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/css/: .vscodeignore  cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/css-language-features/: .vscodeignore  CONTRIBUTING.md  README.md  esbuild.browser.mts  esbuild.mts  package-lock.json  package.json  package.nls.json
extensions/dart/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/debug-auto-launch/: esbuild.mts  package-lock.json  package.json  package.nls.json
extensions/debug-server-ready/: .vscodeignore  package-lock.json  package.json  package.nls.json  tsconfig.json
extensions/diff/: .vscodeignore  cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/docker/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/dotenv/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/emmet/: .vscodeignore  CONTRIBUTING.md  README.md  cgmanifest.json  esbuild.browser.mts  esbuild.mts  package-lock.json  package.json  package.nls.json  tsconfig.browser.json  tsconfig.json
extensions/extension-editing/: .vscodeignore  esbuild.browser.mts  esbuild.mts  package-lock.json  package.json  package.nls.json  tsconfig.browser.json  tsconfig.json
extensions/fsharp/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/git/: .vscodeignore  README.md  extension.webpack.config.js  package-lock.json  package.json  package.nls.json  tsconfig.json
extensions/git-base/: .vscodeignore  README.md  cgmanifest.json  esbuild.browser.mts  package-lock.json  package.json  package.nls.json  tsconfig.browser.json
extensions/github/: .vscodeignore  README.md  extension.webpack.config.js  markdown.css  package-lock.json  package.json  package.nls.json  tsconfig.json
extensions/github-authentication/: .gitignore  .vscodeignore  README.md  extension-browser.webpack.config.js  extension.webpack.config.js  package-lock.json  package.json  package.nls.json  tsconfig.json
extensions/go/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/groovy/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/grunt/: .vscodeignore  README.md  package-lock.json  package.json  package.nls.json  tsconfig.json
extensions/gulp/: README.md  package-lock.json  package.json  package.nls.json
extensions/handlebars/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/hlsl/: cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/html/: .vscodeignore  cgmanifest.json  language-configuration.json  package.json  package.nls.json
extensions/html-language-features/: .vscodeignore  CONTRIBUTING.md  README.md  cgmanifest.json  esbuild.browser.mts  esbuild.mts  package-lock.json  package.json  package.nls.json
extensions/ini/: .vscodeignore  cgmanifest.json  ini.language-configuration.json  package.json  package.nls.json  properties.language-configuration.json
extensions/ipynb/: .gitignore  .vscodeignore  README.md  esbuild.browser.mts  esbuild.mts  esbuild.notebook.mts  package-lock.json  package.json  package.nls.json  tsconfig.browser.json  tsconfig.json
extensions/jake/: .npmrc  .vscodeignore  README.md  esbuild.mts  package-lock.json  package.json  package.nls.json
extensions/java/: cgmanifest.json  package.json  (+2 more)
src/: bootstrap-cli.ts  bootstrap-esm.ts  bootstrap-fork.ts  bootstrap-import.ts  bootstrap-meta.ts  bootstrap-node.ts  bootstrap-server.ts  cli.ts  main.ts  server-cli.ts  server-main.ts  tsconfig.base.json  tsconfig.defineClassFields.json  tsconfig.json  tsconfig.monaco.json  tsconfig.tsec.json  tsconfig.vscode-dts.json  tsconfig.vscode-proposed-dts.json  tsec.exemptions.json
src.zig/: main.zig
stdlib/: .depend  GUIDELINES.md  Makefile  StdlibModules  array.mli  arrayLabels.mli  atomic.ml  atomic.mli  dune  dynarray.ml  dynarray.mli  effect.ml  format.ml  format.mli  fun.ml  fun.mli  gc.mli  header.c  list.mli  listLabels.mli  map.mli  moreLabels.mli  nativeint.ml  nativeint.mli  printexc.ml  set.mli  string.mli  stringLabels.mli
utils/: clflags.ml  clflags.mli  dune  warnings.ml
(+7855 files in other folders)
