;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (targets config.ml)
 (mode    fallback)
 (deps    config.generated.ml config.common.ml)
 (action
   (with-stdout-to %{targets}
     (system "cat %{deps}"))))

(rule
 (targets domainstate.ml)
 (mode    fallback)
 (deps    ../runtime/caml/domain_state.tbl)
 (action
   (with-stdout-to %{targets}
     (system
       "%{read-lines:../build-aux/cpp} -I ../runtime %{dep:domainstate.ml.c}"
       ))))

(rule
 (targets domainstate.mli)
 (mode    fallback)
 (deps    ../runtime/caml/domain_state.tbl)
 (action
   (with-stdout-to %{targets}
     (system
       "%{read-lines:../build-aux/cpp} -I ../runtime %{dep:domainstate.mli.c}"
       ))))
